fix spacing

--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@ body {
 }
 
 ._text {
-  width: 60%;
+  width: 80%;
   float: left;
   margin: 10% 0 0 10%;
   font-size: 1em;
